unpackaged/main/default/objects/Opportunity/fields/Actual_Live_to_Site__c.field-meta.xml
<CustomField>
    <fullName>Actual_Live_to_Site__c</fullName>
    <label>Actual Live to Site</label>
    <type>Date</type>
</CustomField>