unpackaged/main/default/objects/Opportunity/fields/Ad_Products_with_Products__c.field-meta.xml
<CustomField>
    <fullName>Ad_Products_with_Products__c</fullName>
    <description>US-0008007</description>
    <label>Ad Products with Products</label>
    <summaryFilterItems>
        <field>Ad_Product__c.IsHavingProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>