unpackaged/main/default/objects/Opportunity/fields/Additional_Columns__c.field-meta.xml
<CustomField>
    <fullName>Additional_Columns__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Additional Columns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line Description</fullName>
            </value>
            <value>
                <fullName>Frequency Cap</fullName>
            </value>
            <value>
                <fullName>Booked Amount</fullName>
            </value>
            <value>
                <fullName>Delivered Amount</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Delivery Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>