unpackaged/main/default/objects/Opportunity/fields/Additional_Mail_Text__c.field-meta.xml
<CustomField>
    <fullName>Additional_Mail_Text__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Additional Mail Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>