unpackaged/main/default/objects/Opportunity/fields/Additional_Website__c.field-meta.xml
<CustomField>
    <fullName>Additional_Website__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Additional Website</label>
    <type>Url</type>
</CustomField>