unpackaged/main/default/objects/Opportunity/fields/AdOps_Info_sent__c.field-meta.xml
<CustomField>
    <fullName>AdOps_Info_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>AdOps-Info sent</label>
    <type>Checkbox</type>
</CustomField>