unpackaged/main/default/objects/Opportunity/fields/Advertiser_Agency_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Agency_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Advertiser Agency Relationship  ||</description>
    <label>Advertiser Agency Relationship</label>
    <referenceTo>Advertiser_Agency_Relationship__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>