unpackaged/main/default/objects/Opportunity/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>AE</label>
    <type>Checkbox</type>
</CustomField>