unpackaged/main/default/objects/Opportunity/fields/Agency_Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Estimate_Number__c</fullName>
    <description>US-0008483 - [Ads 2020] IO Object references to relocate to Opportunity</description>
    <label>Agency Estimate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>