unpackaged/main/default/objects/Opportunity/fields/Agency_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Order_Number__c</fullName>
    <description>US-0008483 - [Ads 2020] IO Object references to relocate to Opportunity</description>
    <label>Agency Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>