unpackaged/main/default/objects/Opportunity/fields/Agency_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Product_Code__c</fullName>
    <description>US-0008483 - [Ads 2020] IO Object references to relocate to Opportunity</description>
    <label>Agency Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>