unpackaged/main/default/objects/Opportunity/fields/Amount_Gross__c.field-meta.xml
<CustomField>
    <fullName>Amount_Gross__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <inlineHelpText>Amount plus any targeting or surcharge</inlineHelpText>
    <label>Total Amount Gross</label>
    <summarizedField>Ad_Product__c.Total_price_incl_Targeting__c</summarizedField>
    <summaryFilterItems>
        <field>Ad_Product__c.Package_line_item__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>