unpackaged/main/default/objects/Opportunity/fields/Amount_Net2Ebay__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net2Ebay__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <inlineHelpText>Discounted amount less agency commission if present</inlineHelpText>
    <label>Total Amount Net2Ebay</label>
    <summarizedField>Ad_Product__c.Amount_Net2eBay__c</summarizedField>
    <summaryFilterItems>
        <field>Ad_Product__c.Package_line_item__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>