unpackaged/main/default/objects/Opportunity/fields/Amount_Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_Net_Net__c</fullName>
    <formula>Amount_Net_Net_Net_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Net Net Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>