unpackaged/main/default/objects/Opportunity/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>ASP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>