unpackaged/main/default/objects/Opportunity/fields/Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Benchmark__c</fullName>
    <inlineHelpText>Client’s specific KPI goals</inlineHelpText>
    <label>Benchmark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>