unpackaged/main/default/objects/Opportunity/fields/Bill_To_Cash_Basis__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Cash_Basis__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To Cash Basis ||</description>
    <formula>IF( ISPICKVAL(Bill_To_Party__c,&quot;Advertiser&quot;),
                  Account.Cash_Basis__c ,
IF(ISPICKVAL(Bill_To_Party__c,&quot;Agency&quot;),Agency__r.Cash_Basis__c,
false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Cash Basis</label>
    <type>Checkbox</type>
</CustomField>