unpackaged/main/default/objects/Opportunity/fields/Bill_to_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Client_Code__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To Client Code  ||</description>
    <formula>CASE( Bill_To_Party__c ,&quot;Advertiser&quot;, Account.Client_Code__c ,&quot;Agency&quot;, Agency__r.Client_Code__c ,&quot;NA&quot;)</formula>
    <label>Bill  To Client Code</label>
    <type>Text</type>
</CustomField>