unpackaged/main/default/objects/Opportunity/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To Contact  ||</description>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bill To Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>