unpackaged/main/default/objects/Opportunity/fields/Bill_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email__c</fullName>
    <label>Bill To Email</label>
    <type>Email</type>
</CustomField>