unpackaged/main/default/objects/Opportunity/fields/Bill_To_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_HQ_State__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To HQ State ||</description>
    <label>Bill To HQ State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>