unpackaged/main/default/objects/Opportunity/fields/Bill_To_HQ_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_HQ_Zip__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To HQ Zip||</description>
    <label>Bill To HQ Zip</label>
    <length>125</length>
    <type>Text</type>
</CustomField>