unpackaged/main/default/objects/Opportunity/fields/Bill_To_MSA__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill To MSA||</description>
    <label>Bill To MSA</label>
    <type>Checkbox</type>
</CustomField>