unpackaged/main/default/objects/Opportunity/fields/Bill_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Party__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Bill to Party  ||</description>
    <label>Bill To Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>