unpackaged/main/default/objects/Opportunity/fields/Bill_to_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Payment_Terms__c</fullName>
    <formula>if(

ISPICKVAL(Bill_To_Party__c, &#39;Advertiser&#39;), TEXT(Account.Payment_Terms__c),

if(
ISPICKVAL(Bill_To_Party__c, &#39;Agency&#39;), TEXT(Agency__r.Payment_Terms__c), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Payment Terms</label>
    <type>Text</type>
</CustomField>