unpackaged/main/default/objects/Opportunity/fields/Bill_to_PO_Required__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_PO_Required__c</fullName>
    <formula>if(

ISPICKVAL(Bill_To_Party__c, &#39;Advertiser&#39;), Account.PO_required__c,

if(
ISPICKVAL(Bill_To_Party__c, &#39;Agency&#39;), Agency__r.PO_required__c, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to PO Required</label>
    <type>Checkbox</type>
</CustomField>