unpackaged/main/default/objects/Opportunity/fields/Bill_to_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_SAP_ID__c</fullName>
    <description>US-0010238 - Migrate class &quot;ContactRoleOnOpportunity&quot; into Hive</description>
    <formula>IF(ISBLANK( SAP_ID_Overwrite__c ),
   IF(
      ISPICKVAL(Bill_To_Party__c, &#39;Advertiser&#39;), Account.SAP_ID__c,
      IF( 
         ISPICKVAL(Bill_To_Party__c, &#39;Agency&#39;), Agency__r.SAP_ID__c, 
   NULL)),
SAP_ID_Overwrite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to SAP ID</label>
    <type>Text</type>
</CustomField>