unpackaged/main/default/objects/Opportunity/fields/Billing_Basis__c.field-meta.xml
<CustomField>
    <fullName>Billing_Basis__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition:Billing Basis  || Default- from Advertiser</description>
    <label>Billing Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>First Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>