unpackaged/main/default/objects/Opportunity/fields/Buyer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Accepted</label>
    <type>Checkbox</type>
</CustomField>