unpackaged/main/default/objects/Opportunity/fields/Buyer_Seat__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Seat__c</fullName>
    <description>US-0009971 - Buyer Seat on PG Opportunities</description>
    <externalId>true</externalId>
    <label>Buyer Seat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>