unpackaged/main/default/objects/Opportunity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>** eBay Ads Campaign Name to be used on Opportunity Name Automation ***</description>
    <label>Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>