unpackaged/main/default/objects/Opportunity/fields/Campaign_End__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Campaign End</label>
    <summarizedField>Ad_Product__c.until_Date__c</summarizedField>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>