unpackaged/main/default/objects/Opportunity/fields/Campaign_KPI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_KPI__c</fullName>
    <inlineHelpText>eg: GMV, CPA, ROAS, CTR, etc</inlineHelpText>
    <label>Campaign KPI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>