unpackaged/main/default/objects/Opportunity/fields/Campaign_Live__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Live?</label>
    <type>Checkbox</type>
</CustomField>