unpackaged/main/default/objects/Opportunity/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <formula>Account_Manager__r.UserRole.DeveloperName=&quot;DE_Camapaign_Manager&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Manager</label>
    <type>Checkbox</type>
</CustomField>