unpackaged/main/default/objects/Opportunity/fields/Campaign_Name_on_Agency_IO__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_on_Agency_IO__c</fullName>
    <description>US-0008483 - [Ads 2020] IO Object references to relocate to Opportunity</description>
    <label>Agency Campaign Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>