unpackaged/main/default/objects/Opportunity/fields/Campaign_Start2__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start2__c</fullName>
    <description>US-0009394 - [Ads 2020] Opportunity Rollup Summary - Incorrect field</description>
    <label>Campaign Start</label>
    <summarizedField>Ad_Product__c.from_Date__c</summarizedField>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>