unpackaged/main/default/objects/Opportunity/fields/CampaignObjective__c.field-meta.xml
<CustomField>
    <fullName>CampaignObjective__c</fullName>
    <description>US-0007876</description>
    <label>Campaign Objective</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Visits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>