unpackaged/main/default/objects/Opportunity/fields/Category_Manager__c.field-meta.xml
<CustomField>
    <fullName>Category_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Category Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>