unpackaged/main/default/objects/Opportunity/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <description>US-0008483 - [Ads 2020] IO Object references to relocate to Opportunity</description>
    <label>Agency Client Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>