unpackaged/main/default/objects/Opportunity/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover</description>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>