unpackaged/main/default/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>