unpackaged/main/default/objects/Opportunity/fields/Country_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_1__c</fullName>
    <description>US-0009221 - [Ads 2020] Field &amp; Formulas for Revenue Recognition and Compliance</description>
    <label>Country Code 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>