unpackaged/main/default/objects/Opportunity/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>IF(ISBLANK(Agency__c), TEXT( Account.Country_Code__c ), TEXT( Agency__r.Country_Code__c ))</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>