unpackaged/main/default/objects/Opportunity/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>IF(ISBLANK(Agency__c),Account.Name,Agency__r.Name)</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>