unpackaged/main/default/objects/Opportunity/fields/Decreasing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Decreasing_Budget__c</fullName>
    <label>Decreasing Budget?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Cuts</fullName>
            </value>
            <value>
                <fullName>Poor Performance</fullName>
            </value>
            <value>
                <fullName>Lack of Scale</fullName>
            </value>
            <value>
                <fullName>Delayed Launch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>