unpackaged/main/default/objects/Opportunity/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Details ||</description>
    <label>Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer KPIs met</fullName>
            </value>
            <value>
                <fullName>Customer KPIs not met</fullName>
            </value>
            <value>
                <fullName>Campaign Performance Issue</fullName>
            </value>
            <value>
                <fullName>Campaign Operational Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>