unpackaged/main/default/objects/Opportunity/fields/Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <inlineHelpText>Amount gross less any discounts</inlineHelpText>
    <label>Total Discounted Amount</label>
    <summarizedField>Ad_Product__c.Discounted_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Ad_Product__c.Package_line_item__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Ad_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>