unpackaged/main/default/objects/Opportunity/fields/EAX__c.field-meta.xml
<CustomField>
    <fullName>EAX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: EAX || 00568884 |</description>
    <label>EAX</label>
    <type>Checkbox</type>
</CustomField>