unpackaged/main/default/objects/Opportunity/fields/eBay_Data_used_in_Targeting__c.field-meta.xml
<CustomField>
    <fullName>eBay_Data_used_in_Targeting__c</fullName>
    <label>eBay Data used in Targeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>