unpackaged/main/default/objects/Opportunity/fields/eBay_Paper__c.field-meta.xml
<CustomField>
    <fullName>eBay_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition:eBay Paper ||</description>
    <label>eBay Paper</label>
    <type>Checkbox</type>
</CustomField>