unpackaged/main/default/objects/Opportunity/fields/eBay_Seller_Selected_ID__c.field-meta.xml
<CustomField>
    <fullName>eBay_Seller_Selected_ID__c</fullName>
    <description>US-0008585 - [NA] Merchant Integration - Initiate help request</description>
    <label>eBay Seller Selected ID</label>
    <type>TextArea</type>
</CustomField>