unpackaged/main/default/objects/Opportunity/fields/eBay_Store_URL__c.field-meta.xml
<CustomField>
    <fullName>eBay_Store_URL__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>eBay Store URL</label>
    <type>Url</type>
</CustomField>