unpackaged/main/default/objects/Opportunity/fields/Eligible_for_Email_Approval__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Email_Approval__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition:Eligible for Email Approvall ||</description>
    <formula>IF( ISPICKVAL(Bill_To_Party__c,&quot;Advertiser&quot;),
                  Account.Eligible_for_Email_Approval__c ,
IF(ISPICKVAL(Bill_To_Party__c,&quot;Agency&quot;),Agency__r.Eligible_for_Email_Approval__c,
false) )</formula>
    <label>Eligible for Email Approval</label>
    <type>Checkbox</type>
</CustomField>