unpackaged/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Campaign End Date  ||</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>