unpackaged/main/default/objects/Opportunity/fields/Estimated_Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Net_Net_Net__c</fullName>
    <formula>Amount_Net_Net_Net__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Net Net Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>