unpackaged/main/default/objects/Opportunity/fields/EU__c.field-meta.xml
<CustomField>
    <fullName>EU__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>IF( ISBLANK( Agency__c ) , Account.locatedInEU__c , Agency__r.locatedInEU__c )</formula>
    <label>EU</label>
    <type>Text</type>
</CustomField>