unpackaged/main/default/objects/Opportunity/fields/Exit_Clause__c.field-meta.xml
<CustomField>
    <fullName>Exit_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Exit-Agreement</label>
    <type>Checkbox</type>
</CustomField>