unpackaged/main/default/objects/Opportunity/fields/Ext_Name_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Ext_Name_Campaign__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>External Name of Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>