unpackaged/main/default/objects/Opportunity/fields/Ext_Name_of_Campaign1__c.field-meta.xml
<CustomField>
    <fullName>Ext_Name_of_Campaign1__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <formula>MID(Ext_Name_Campaign__c,0,70)</formula>
    <label>External Name of Campaign1</label>
    <type>Text</type>
</CustomField>