unpackaged/main/default/objects/Opportunity/fields/Final_Campaign_Performance__c.field-meta.xml
<CustomField>
    <fullName>Final_Campaign_Performance__c</fullName>
    <label>Final Campaign Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>