unpackaged/main/default/objects/Opportunity/fields/Final_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Final_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Final Reporting</label>
    <type>Checkbox</type>
</CustomField>