unpackaged/main/default/objects/Opportunity/fields/First_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Booked_Date__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>First Booked Date</label>
    <type>Date</type>
</CustomField>