unpackaged/main/default/objects/Opportunity/fields/First_Time_Client__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Client__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: First Time Client||</description>
    <formula>IF(
ISPICKVAL(Bill_To_Party__c,&quot;Advertiser&quot;) &amp;&amp; Account.Opportunities_Won__c   =  0,true
,
IF(ISPICKVAL(Bill_To_Party__c,&quot;Agency&quot;) &amp;&amp; Agency__r.Opportunities_Won__c  =  0,false,
false) )</formula>
    <label>First Time Client</label>
    <type>Checkbox</type>
</CustomField>