unpackaged/main/default/objects/Opportunity/fields/Focus_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Focus_Vertical__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Focus Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Refurbished</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Emerging Verticals</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Certified Pre-Owned</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Pre-Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>