unpackaged/main/default/objects/Opportunity/fields/Focus_Vertical_Other__c.field-meta.xml
<CustomField>
    <fullName>Focus_Vertical_Other__c</fullName>
    <description>US-0008557 - [NA] Opportunity Layout &quot;Details&quot; and &quot;Related&quot; sections</description>
    <label>Focus Vertical Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>