unpackaged/main/default/objects/Opportunity/fields/Gross_Media_Spend__c.field-meta.xml
<CustomField>
    <fullName>Gross_Media_Spend__c</fullName>
    <label>Gross Media Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>