unpackaged/main/default/objects/Opportunity/fields/GST_amount__c.field-meta.xml
<CustomField>
    <fullName>GST_amount__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>GST amount</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>