unpackaged/main/default/objects/Opportunity/fields/Incremental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Amount__c</fullName>
    <label>Incremental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>